Updated images directory to show static images

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <section class="main">
         <div class="card-container">
             <div class="card">
-                <img src="./images/DogWithLadyInFlowerField.jpg" alt="Dog with lady in Flower Field" id="">
+                <img src="images/DogWithLadyInFlowerField.jpg" alt="Dog with lady in Flower Field" id="">
                 <p class="card-caption">Dog with lady in Flower Field</p>
             </div>
             <div class="card">
-                <img src="./images/LaptopWithCoffeeAndNotebook.jpg" alt="Laptop with Notebook and Coffee" id="">
+                <img src="images/LaptopWithCoffeeAndNotebook.jpg" alt="Laptop with Notebook and Coffee" id="">
                 <p class="card-caption">Laptop with Notebook and Coffee</p>
             </div>
             <div class="card">
-                <img src="./images/StudentTypingKeyboard.jpg" alt="Student typing on Keyboard" id="">
+                <img src="images/StudentTypingKeyboard.jpg" alt="Student typing on Keyboard" id="">
                 <p class="card-caption">Student typing on Keyboard</p>
             </div>
         </div>
