--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="icon-container">
             <i class="bi bi-brightness-high-fill" id="toggleDark"></i>
         </div>
-        <h1 class="heading">Image Search App</h1>
+        <h1 class="heading">Image Splasher</h1>
         <form action="">
             <input type="text" id="search-input" placeholder="Search for images">
             <button class="searchbtn">Search</button>
